--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeply": "npm run build" 
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +40,6 @@
   "devDependencies": {
     "gh-pages": "^3.2.3",
     "react-router-dom": "^5.2.0"
-  }
+  },
+  "homepage": "https://vlunaklick.github.io/shopping_cart/"
 }
