--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@testing-library/jest-dom": "5.14.1",
+    "@testing-library/react": "11.2.7",
+    "@testing-library/user-event": "12.8.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,8 +38,20 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3",
-    "react-router-dom": "^5.2.0"
+    "gh-pages": "3.2.3",
+    "react-router-dom": "5.2.0"
   },
-  "homepage": "https://vlunaklick.github.io/shopping_cart/"
+  "homepage": "https://vlunaklick.github.io/shopping_cart/",
+  "description": "<h1 align=\"center\">Welcome to my Shopping Cart 👋</h1> <p>   <img alt=\"Version\" src=\"https://img.shields.io/badge/version-1.0.0-blue.svg?cacheSeconds=2592000\" /> </p>",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vlunaklick/shopping_cart.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/vlunaklick/shopping_cart/issues"
+  }
 }
